# python-mcp-server-template

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dev  Dockerfile.runtime  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
deploy/: entrypoint.sh
src/: main.py
src/api/handlers/health/: health.py
src/internal/logger/: logger.py
test/: test_handlers.py  test_integration.py
test/docker/: docker-compose.yml  run-postintegration.sh  run-preintegration.sh
